speech-tools (1:2.1~release-4) UNRELEASED; urgency=low

  * compat: bump to debhelper 8
  * Move to source format 3.0 quilt.
  * Refresh contexts, clean up some patches, and del. obs. uncompiled patches
  * Clean build system and drop obsolete compiler patches.

 -- Peter Drysdale <drysdalepete@gmail.com>  Tue, 15 Nov 2011 12:27:24 +1000

speech-tools (1:2.1~release-3) UNRELEASED; urgency=low

  * control: Depend on hardening-check.
  * rules: Set DEB_BUILD_HARDENING=1 to enable hardening.
  * patches/fmt.diff: Fix format security issue.

 -- Samuel Thibault <sthibault@debian.org>  Mon, 07 Nov 2011 00:43:06 +0100

speech-tools (1:2.1~release-2.1) unstable; urgency=low

  * New maintainer (closes: #637820)

 -- Jean-Philippe MENGUAL <texou@accelibreinfo.eu>  Tue, 16 Aug 2011 02:19:25 +0200

speech-tools (1:2.1~release-2) unstable; urgency=low

  * Make libestools2.1-dev provide libestools2.0-dev, so that binNMUs can
    be facilitated.
  * Add missing copyright entries.

 -- Kumar Appaiah <akumar@debian.org>  Thu, 24 Feb 2011 09:57:35 -0600

speech-tools (1:2.1~release-1) unstable; urgency=low

  * New upstream release
  * Bump soname; shlibs etc. updated
  * Update patches and rules file to handle symlinks with just x.y
    versioning as opposed to x.y.z by appropriately ignoring the absence
    of the minor version number. Also fix major version detection in
    debian/get_version.sh.
  * Update watch file to handle "release" in version number

 -- Kumar Appaiah <akumar@debian.org>  Wed, 16 Feb 2011 20:53:04 -0600

speech-tools (1:2.0.95~beta-2) unstable; urgency=low

  * Update speech_class_EST_WaveFile.cc.diff to fix audsp related
    crashes. (Closes: #601294)
  * Update Standards Version to 3.9.1 (no changes needed)

 -- Kumar Appaiah <akumar@debian.org>  Sun, 24 Oct 2010 19:02:37 -0500

speech-tools (1:2.0.95~beta-1) unstable; urgency=low

  [ Kartik Mistry ]
  * debian/control:
    + [Lintian] Added missing ${misc:Depends}