@@ -1,11 +1,12 @@
 speech-tools (1:2.1~release-4) UNRELEASED; urgency=low
 
   * compat: bump to debhelper 8
+  * Move to dh style minimum format for rules.
   * Move to source format 3.0 quilt.
   * Refresh contexts, clean up some patches, and del. obs. uncompiled patches
   * Clean build system and drop obsolete compiler patches.
 
- -- Peter Drysdale <drysdalepete@gmail.com>  Tue, 15 Nov 2011 12:27:24 +1000
+ -- Peter Drysdale <drysdalepete@gmail.com>  Sat, 26 Nov 2011 09:47:52 +1000
 
 speech-tools (1:2.1~release-3) UNRELEASED; urgency=low
 
